examples/scenarios/21-var-redeclaration-edge-cases/error-function-var-collision.mncnk
chunk "Main" {
  let fn: int = 1;
  function fn(): int { // error: redeclaration in the same scope
    return 1;
  }

  print(fn);
};
moon(Main);
